--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 [build]
   publish = "public"
-  command = "hugo"
+  command = "hugo mod get -u && hugo --gc --minify"
 
 [build.environment]
   HUGO_VERSION = "0.145.0"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
+  GO_VERSION = "1.20"
 
 [context.production.environment]
   HUGO_ENV = "production"
