--- a/config.yaml
+++ b/config.yaml
@@ -28,15 +28,15 @@ params:
   # Site contact email
   email: your.email@example.com
   # Site location
-  location: Berkeley, CA
+  location: Los Angeles, CA
   # Site avatar
   avatar: img/avatar.jpg
   # Site organization
-  organization: UC Berkeley
+  organization: UCLA
   # Site role
   role: Senior Student in Statistics & Data Science
   # Site bio
-  bio: Senior student studying Statistics and Data Science with a passion for data analysis and visualization.
+  bio: Senior student studying Statistics and Data Science at UCLA with a passion for data analysis and visualization.
   # Site interests
   interests:
     - Data Analysis
@@ -53,7 +53,7 @@ params:
       link: https://www.linkedin.com/in/wei-lin-chen-685259346
     - icon: file-pdf
       icon_pack: fas
-      link: Resume_UCB.pdf
+      link: /Resume_UCB.pdf
       label: Resume
 
 # Menu items
@@ -62,12 +62,9 @@ menu:
     - name: Home
       url: /
       weight: 1
-    - name: Projects
-      url: /project/
-      weight: 2
     - name: About
       url: /about/
-      weight: 3
+      weight: 2
     - name: Resume
-      url: Resume_UCB.pdf
-      weight: 4
+      url: /Resume_UCB.pdf
+      weight: 3
